--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 // typography
 $font-family: Arial, serif;
 $font-header: Georgia, serif;
-$font-size-base: 16px;
+$font-size-base: 1em;
 $line-height-base: 1.5em;
 
 // colors
