--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -1,5 +1,7 @@
 .wrapper {
-  width: 900px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 960px;
   margin: 0 auto;
+  @include box-sizing(border-box);
+  padding: 0 1em;
 }
